完成登录注册（token校验还未完成）

--- a/项目说明文档.md
+++ b/项目说明文档.md
@@ -1,2 +1,55 @@
 # 项目说明文档
 > 这是一个基于vue+node+mongoDB实现的后台管理项目，admin是后台管理界面，server文件夹提供服务接口
+
+
+
+## API接口
+
+接口根路径: `http://localhost:7000/`
+
+### 注册
+
+| 请求方式 | 请求路径 |             参数              |
+| :------: | :------: | :---------------------------: |
+|   POST   | register | {email,password,res_password} |
+
+响应数据：
+
+``` js
+{
+  tip: '至少输入6个字符，最多不超过16个字符,允许.和_',
+  status: 2
+}
+```
+
+| status值 |        信息        |
+| :------: | :----------------: |
+|    0     |      注册成功      |
+|    1     | 邮箱格式不符合要求 |
+|    2     |   密码不符合要求   |
+|    3     | 两次输入的密码不同 |
+|          |   邮箱已经被注册   |
+
+### 登录
+
+| 请求方式 | 请求路径 |       参数       |
+| :------: | :------: | :--------------: |
+|   POST   |  login   | {email,password} |
+
+响应数据：
+
+``` js
+{
+  tip: '至少输入6个字符，最多不超过16个字符,允许.和_',
+  status: 2
+}
+```
+
+| status值 |        信息        |
+| :------: | :----------------: |
+|    0     |      注册成功      |
+|    1     | 邮箱格式不符合要求 |
+|    2     |   密码不符合要求   |
+|    3     | 两次输入的密码不同 |
+|    4     |   邮箱已经被注册   |
+
