--- a/项目说明文档.md
+++ b/项目说明文档.md
@@ -17,30 +17,7 @@
 
 ``` js
 {
-  tip: '至少输入6个字符，最多不超过16个字符,允许.和_',
-  status: 2
-}
-```
-
-| status值 |        信息        |
-| :------: | :----------------: |
-|    0     |      注册成功      |
-|    1     | 邮箱格式不符合要求 |
-|    2     |   密码不符合要求   |
-|    3     | 两次输入的密码不同 |
-|          |   邮箱已经被注册   |
-
-### 登录
-
-| 请求方式 | 请求路径 |       参数       |
-| :------: | :------: | :--------------: |
-|   POST   |  login   | {email,password} |
-
-响应数据：
-
-``` js
-{
-  tip: '至少输入6个字符，最多不超过16个字符,允许.和_',
+  message: '至少输入6个字符，最多不超过16个字符,允许.和_',
   status: 2
 }
 ```
@@ -52,4 +29,64 @@
 |    2     |   密码不符合要求   |
 |    3     | 两次输入的密码不同 |
 |    4     |   邮箱已经被注册   |
+
+### 登录
+
+| 请求方式 | 请求路径 |       参数       |
+| :------: | :------: | :--------------: |
+|   POST   |  login   | {email,password} |
+
+响应数据：
+
+``` js
+// 登录未成功时,status值为1~4
+{
+	message: '用户尚未注册！',
+  status: 3
+}
+// 登录成功时,status值为0,携带token
+{
+  status: 0,
+ 	token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9 
+}
+```
+
+
+
+| status值 |        信息        |
+| :------: | :----------------: |
+|    0     |      登录成功      |
+|    1     | 邮箱格式不符合要求 |
+|    2     |   密码不符合要求   |
+|    3     |    用户尚未注册    |
+|    4     |      密码错误      |
+
+
+
+## 笔记
+
+### app.get和router.get区别
+
+app.get()是应用级中间件，router.get() 是路由级中间件，路由级中间件可以更加细化而不影响全局
+
+### app.get和app.use区别
+
+`app.get(path,callback)` callback只能传入回调函数，不能传入路由对象。
+`app.use(path,callback)` callback传入回调函数和路由对象皆可。
+
+
+
+### http-assert
+
+> 错误处理包
+
+安装：`yarn add http-assert`
+
+使用
+
+``` JS
+const assert=require('http-assert')
+// 判断uesr是否存在，如果不存在返回401状态码和message
+assert(user,401,'message')
+```
 
