解决服务端token验证不完整的bug,前端添加侧边栏展开缩进按钮

--- a/项目说明文档.md
+++ b/项目说明文档.md
@@ -71,7 +71,7 @@
 
 | 请求方式 |  请求路径  | 参数 |
 | :------: | :--------: | :--: |
-|   GET    | aside_list |  \   |
+|   GET    | aside_list |  无  |
 
 响应数据：
 
@@ -118,7 +118,7 @@
 ]
 ```
 
-
+**如果token为空或者是伪造的token服务器返回401状态码，并且返回JSON对象 {message: "权限过期，请重新登录！"}**
 
 
 
