优化home页代码修复一些小问题

--- a/项目说明文档.md
+++ b/项目说明文档.md
@@ -19,7 +19,15 @@
 | :------: | :------: | :---------------------------: |
 |   POST   | register | {email,password,res_password} |
 
-响应数据：
+**参数说明：**
+
+email: 邮箱（必选）
+
+password：密码（必选）
+
+res_password：确认密码（必选）
+
+**响应数据：**
 
 ``` js
 {
@@ -27,6 +35,8 @@
   status: 2
 }
 ```
+
+**status值说明:**
 
 | status值 |        信息        |
 | :------: | :----------------: |
@@ -43,7 +53,13 @@
 | :------: | :------: | :--------------: |
 |   POST   |  login   | {email,password} |
 
-响应数据：
+**参数说明：**
+
+email: 邮箱（必选）
+
+password：密码（必选）
+
+**响应数据：**
 
 ``` js
 // 登录未成功时,status值为1~4
@@ -58,7 +74,7 @@
 }
 ```
 
-
+**status值说明:**
 
 | status值 |        信息        |
 | :------: | :----------------: |
@@ -74,7 +90,7 @@
 | :------: | :--------: | :--: |
 |   GET    | aside_list |  无  |
 
-响应数据：
+**响应数据：**
 
 ``` js
 {
@@ -89,15 +105,13 @@
 
 
 
-
-
 ###获取侧边栏列表
 
 | 请求方式 |  请求路径  | 参数 |
 | :------: | :--------: | :--: |
 |   GET    | aside_list |  无  |
 
-响应数据：
+**响应数据：**
 
 ``` js
 [
@@ -144,15 +158,48 @@
 
 **如果token为空或者是伪造的token服务器返回401状态码，并且返回JSON对象 {message: "权限过期，请重新登录！"}**
 
-
-
 ### 添加用户
 
 | 请求方式 | 请求路径 |            参数             |
 | :------: | :------: | :-------------------------: |
 |   POST   | add_user | {email,user_name,role_name} |
 
-响应数据：
+**参数介绍：**
+
+email: 邮箱（必选）
+
+user_name: 用户名（可选）
+
+role_name：角色名（可选）
+
+**响应数据：**
+
+``` js
+{ message: "该用户已经被添加！", status: 3 }
+```
+
+**status值介绍：**
+
+| status值 |      message       |
+| :------: | :----------------: |
+|    0     |      添加成功      |
+|    1     | 邮箱格式不符合要求 |
+|    2     | 用户名与邮箱不匹配 |
+|    3     |  该邮箱已经被添加  |
+
+### 获取用户列表
+
+| 请求方式 | 请求路径 |        参数        |
+| :------: | :------: | :----------------: |
+|   GET    | add_user | {pageNum,pageSize} |
+
+**参数介绍：**
+
+pageNum:当前页码
+
+pageSize:每页显示条数
+
+**响应数据：**
 
 ``` js
 { message: "该用户已经被添加！", status: 3 }
@@ -166,8 +213,6 @@
 |    1     | 邮箱格式不符合要求 |
 |    2     | 用户名与邮箱不匹配 |
 |    3     |  该邮箱已经被添加  |
-
-
 
 ## 笔记
 
@@ -197,7 +242,7 @@ app.use(cors())
 
 ### http-assert
 
-> 错误处理的包
+> 错误处理的包,需要express5.x版本以上
 
 安装：`yarn add http-assert`
 
